--- a/pred_lstm.ipynb
+++ b/pred_lstm.ipynb
@@ -9,12 +9,27 @@
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a8e84493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import tokenizer_from_json\n",
+    "\n",
+    "with open('tokenizer.json') as f:\n",
+    "    data = json.load(f)\n",
+    "    tokenizer = tokenizer_from_json(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "cd92edd0",
    "metadata": {},
    "outputs": [],
@@ -24,16 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3b90337b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def pred_sentiment(string):\n",
     "    text = [string]\n",
-    "\n",
-    "    tokenizer = Tokenizer(num_words=5000, oov_token='x')\n",
-    "    tokenizer.fit_on_texts(text)\n",
     "\n",
     "    sekuens_x = tokenizer.texts_to_sequences(text)\n",
     "    padded_x = pad_sequences(sekuens_x)\n",
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "361dc3b4",
    "metadata": {},
    "outputs": [],
@@ -63,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "eeeee716",
    "metadata": {},
    "outputs": [],
@@ -73,8 +85,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cf0f55db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Business\n"
+     ]
+    }
+   ],
+   "source": [
+    "classes = pred_sentiment(string)\n",
+    "pred(classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5edc19da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = \"SPACE.com - TORONTO, Canada -- A second\\team of rocketeers competing for the  #36;10 million Ansari X Prize, a contest for\\privately funded suborbital space flight, has officially announced the first\\launch date for its manned rocket.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "39493e9e",
    "metadata": {},
    "outputs": [
     {
@@ -92,63 +133,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5edc19da",
+   "execution_count": null,
+   "id": "7a8deec3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "string = \"SPACE.com - TORONTO, Canada -- A second\\team of rocketeers competing for the  #36;10 million Ansari X Prize, a contest for\\privately funded suborbital space flight, has officially announced the first\\launch date for its manned rocket.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "39493e9e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sports\n"
-     ]
-    }
-   ],
-   "source": [
-    "classes = pred_sentiment(string)\n",
-    "pred(classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "885a252d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'SPACE.com - TORONTO, Canada -- A second\\team of rocketeers competing for the  #36;10 million Ansari X Prize, a contest for\\\\privately funded suborbital space flight, has officially announced the first\\\\launch date for its manned rocket.'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "string"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa729ef",
+   "id": "b7a21718",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "SPACE.com - TORONTO, Canada -- A second team of rocketeers competing for the 36 10 million Ansari X Prize, a contest for privately funded suborbital space flight, has officially announced the first launch date for its manned rocket"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65ff5479",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
