--- a/pred_lstm.ipynb
+++ b/pred_lstm.ipynb
@@ -10,13 +10,14 @@
     "from tensorflow.keras.models import load_model\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "import json"
+    "import json\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a8e84493",
+   "id": "778a826c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pred_sentiment(string):\n",
+    "def pred_sentiment(string):    \n",
+    "    string = re.sub(r'[^a-zA-Z0-9. ]', '', string)\n",
+    "    string = string.lower()\n",
     "    text = [string]\n",
     "\n",
     "    sekuens_x = tokenizer.texts_to_sequences(text)\n",
@@ -134,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8deec3",
+   "id": "4fbae3ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -142,15 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7a21718",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65ff5479",
+   "id": "dc682f15",
    "metadata": {},
    "outputs": [],
    "source": []
